apps/configs/checkmate/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: checkmate-client
  namespace: checkmate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`checkmate.local.ruizops.com`)
      kind: Rule
      priority: 100
      services:
        - name: client
          namespace: checkmate
          port: 80
  tls:
    secretName: checkmate-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: checkmate-api
  namespace: checkmate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`checkmate-api.local.ruizops.com`)
      kind: Rule
      priority: 100
      services:
        - name: server
          namespace: checkmate
          port: 52345
  tls:
    secretName: checkmate-tls
